--- a/bitlbee/Dockerfile
+++ b/bitlbee/Dockerfile
@@ -1,43 +1,17 @@
-FROM debian:jessie
+FROM ubuntu:12.04
 MAINTAINER Jack Meredith <jackusm95@gmail.com>
 
-RUN apt-get update && apt-get install -y \
-      asciidoc \
-      build-essential \
-      git \
-      libgcrypt20-dev \
-      libglib2.0-dev \
-      libgnutls28-dev \
-      xsltproc \
-      xmlto && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
 RUN useradd -d /var/lib/bitlbee --no-create-home --shell /usr/sbin/nologin bitlbee
-
 COPY bitlbee.conf /etc/bitlbee/bitlbee.conf
 RUN mkdir -p /var/lib/bitlbee/ /var/run/bitlbee
 RUN chown -R bitlbee /var/lib/bitlbee/ /var/run/bitlbee
-
-EXPOSE 6667
 VOLUME /var/lib/bitlbee
+EXPOSE 6667
 
-ENV BITLBEE_VERSION 3.2.2-1
+RUN	echo "deb http://archive.ubuntu.com/ubuntu precise universe" >> /etc/apt/sources.list && \
+	echo "deb http://download.opensuse.org/repositories/home:/jgeboski/xUbuntu_12.04" >> /etc/apt/sources.list && \
+	apt-get update && \
+	apt-get install -y bitlbee bitlbee-otr bitlbee-facebook bitlbee-steam && \
+	rm -rf /var/lib/apt/lists/*
 
-WORKDIR /usr/src
-RUN git clone https://github.com/bitlbee/bitlbee.git
-WORKDIR /usr/src/bitlbee
-RUN git checkout $BITLBEE_VERSION
-RUN ./configure \
-      --debug=0 \
-      --ssl=gnutls \
-      --prefix=/usr \
-      --etcdir=/etc/bitlbee
-RUN make
-# Docs fail to build. We need to force them
-RUN (cd doc && make -C user-guide)
-RUN make install
-RUN make install-etc
-
-WORKDIR /
-ENTRYPOINT [ "/usr/sbin/bitlbee" ]
+ENTRYPOINT ["/usr/sbin/bitlbee", "-D", "-n"]
