install pacaur too

--- a/archlinux/Dockerfile
+++ b/archlinux/Dockerfile
@@ -10,4 +10,14 @@ ONBUILD RUN pacman-key --populate && \
   pacman -S --force openssl --noconfirm && \
   pacman -S pacman --noprogressbar --noconfirm && \
   pacman-db-upgrade && \
-  pacman -Syyu --noprogressbar --noconfirm
+  pacman -Syyu --noprogressbar --noconfirm && \
+  mkdir -p /tmp/pacaur_install && \
+  cd /tmp/pacaur_install && \
+  pacman -S expac yajl git --noconfirm && \
+  curl -o PKGBUILD https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=cower && \
+  makepkg PKGBUILD --skippgpcheck && \
+  pacman -U cower*.tar.xz --noconfirm && \
+  curl -o PKGBUILD https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=pacaur && \
+  makepkg PKGBUILD && \
+  pacman -U pacaur*.tar.xz --noconfirm && \
+  rm -r /tmp/pacaur_install
