another try altogether kek

--- a/bitlbee/Dockerfile
+++ b/bitlbee/Dockerfile
@@ -1,6 +1,17 @@
-FROM logankoester/archlinux
+FROM base/devel:minimal
 MAINTAINER Jack Meredith <jackusm95@gmail.com>
 
+RUN pacman -Sy archlinux-keyring
+RUN mkdir -p /tmp/pacaur_install && \
+  cd /tmp/pacaur_install && \
+  pacman -S expac yajl git --noconfirm && \
+  curl -o PKGBUILD https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=cower && \
+  makepkg PKGBUILD --skippgpcheck && \
+  pacman -U cower*.tar.xz --noconfirm && \
+  curl -o PKGBUILD https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=pacaur && \
+  makepkg PKGBUILD && \
+  pacman -U pacaur*.tar.xz --noconfirm && \
+  rm -r /tmp/pacaur_install
 RUN pacaur -S bitlbee bitlbee-otr bitlbee-libpurple bitlbee-facebook bitlbee-steam bitlbee-discord-git
 COPY bitlbee.conf /etc/bitlbee/bitlbee.conf
 RUN chown -R bitlbee:bitlbee /var/lib/bitlbee
