--- a/bitlbee/Dockerfile
+++ b/bitlbee/Dockerfile
@@ -1,18 +1,16 @@
-FROM base/devel:minimal
+FROM alpine
 MAINTAINER Jack Meredith <jackusm95@gmail.com>
 
-RUN pacman -Sy archlinux-keyring --noconfirm
-RUN mkdir -p /tmp/pacaur_install && \
-  cd /tmp/pacaur_install && \
-  pacman -Syu expac yajl git --noconfirm && \
-  curl -o PKGBUILD https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=cower && \
-  makepkg PKGBUILD --skippgpcheck && \
-  pacman -U cower*.tar.xz --noconfirm && \
-  curl -o PKGBUILD https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=pacaur && \
-  makepkg PKGBUILD && \
-  pacman -U pacaur*.tar.xz --noconfirm && \
-  rm -r /tmp/pacaur_install
-RUN pacaur -S bitlbee bitlbee-otr bitlbee-libpurple bitlbee-facebook bitlbee-steam bitlbee-discord-git --noconfirm
+RUN apk add --update-cache bitlbee bitlbee-otr \
+  && rm -rf /var/cache/apk/*
+
+RUN addgroup bitlbee && \
+  adduser -D -H -h /var/lib/bitlbee -s /bin/sh -G bitlbee bitlbee
+
+COPY entrypoint.sh /sbin/entrypoint
 COPY bitlbee.conf /etc/bitlbee/bitlbee.conf
-RUN chown -R bitlbee:bitlbee /var/lib/bitlbee
-CMD ["bitlbee"]
+VOLUME /var/lib/bitlbee
+
+EXPOSE 6667
+ENTRYPOINT ["/sbin/entrypoint"]
+CMD ["bitlbee", "-n"]
