--- a/bitlbee/bitlbee.conf
+++ b/bitlbee/bitlbee.conf
@@ -16,7 +16,7 @@
 ##    child processes. This should be pretty safe and reliable to use instead
 ##    of inetd mode.
 ##
-RunMode = ForkDaemon
+RunMode = Daemon
 
 ## User:
 ##
@@ -49,7 +49,7 @@ DaemonPort = 6667
 ##  Registered -- Only allow registered users to use this server; this disables
 ##    the register- and the account command until the user identifies itself.
 ##
-AuthMode = Open
+# AuthMode = Open
 
 ## AuthPassword
 ##
