--- a/weechat/Dockerfile
+++ b/weechat/Dockerfile
@@ -1,28 +1,19 @@
-FROM ubuntu:14.04
+FROM gliderlabs/alpine:3.2
 MAINTAINER Jack Meredith <jackusm95@gmail.com>
 
+RUN apk-install weechat ruby python python-dev py-pip build-base && \
+    mkdir /data && \
+    pip install python-potr && \
+    apk del python-dev py-pip build-base
 
-ENV _clean="rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*"
-ENV _apt_clean="eval apt-get clean && $_clean"
-# apt-get clean -y && apt-get autoclean -y && apt-get autoremove -y
+ENV LANG C.UTF-8
+ENV HOME /weechat
 
+RUN mkdir -p $HOME/.weechat\
+    && addgroup weechat\
+    && adduser -h $HOME -D -s /bin/bash -G weechat weechat\
+    && chown -R weechat:weechat $HOME
 
-RUN apt-get update && apt-get install -y \
-    weechat \
-    --no-install-recommends \
-    && rm -rf /var/lib/apt/lists/*
-
-# Setup weechat user
-RUN groupadd -o -g 3333 weechat \
- && useradd -o -u 3333 -g weechat --shell /bin/bash -d ~/.weechat weechat \
- && install -o weechat -g weechat -d ~/.weechat
-
-
-# let irssi and weechat users sudo without password
-RUN echo "weechat ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
-
-
-# Default container settings
+WORKDIR $HOME
 USER weechat
-EXPOSE 6697
 ENTRYPOINT ["weechat"]
