--- a/youtube-dl/Dockerfile
+++ b/youtube-dl/Dockerfile
@@ -1,7 +1,8 @@
-FROM crosbymichael/python
+FROM gliderlabs/alpine:3.2
+MAINTAINER Jack Meredith <jackusm95@gmail.com>
 
-ENV YOUTUBE_DL_VERSION 2016.07.11
-RUN pip install --upgrade youtube_dl && mkdir /download
+RUN apk-install py-pip && \
+	pip install --upgrade youtube_dl && mkdir /download
 WORKDIR /download
 ENTRYPOINT ["youtube-dl"]
 CMD ["--help"]
