--- a/wow-better-cli/Dockerfile
+++ b/wow-better-cli/Dockerfile
@@ -1,9 +1,7 @@
-FROM	centos:centos6
+FROM iron/node:dev
 MAINTAINER Jack Meredith <jackusm95@gmail.com>
 
-RUN	yum install -y epel-release
-RUN	yum install -y nodejs npm
-RUN	npm install -g wow-better-cli
+RUN npm install -g wow-better-cli
 
 ENV	WOWPATH /wow
 ENTRYPOINT ["/usr/bin/wow"]
