--- a/wow-better-cli/Dockerfile
+++ b/wow-better-cli/Dockerfile
@@ -1,7 +1,9 @@
-FROM iron/node:dev
+FROM centos:centos6
 MAINTAINER Jack Meredith <jackusm95@gmail.com>
 
-RUN npm install -g wow-better-cli
+RUN	yum install -y epel-release
+RUN	yum install -y nodejs npm
+RUN	npm install -g wow-better-cli
 
 ENV	WOWPATH /wow
 ENTRYPOINT ["/usr/bin/wow"]
