better? tor-browser

--- a/tor-browser/Dockerfile
+++ b/tor-browser/Dockerfile
@@ -1,52 +1,44 @@
-# Run tor browser in a container
-#
-# docker run -v /tmp/.X11-unix:/tmp/.X11-unix \
-#	-v /dev/snd:/dev/snd \
-#	-e DISPLAY=unix$DISPLAY \
-#	tor-browser
-#
 FROM debian:jessie
-MAINTAINER Jack Meredith <jackusm95@gmail.com>
 
-RUN apt-get update && apt-get install -y \
-	ca-certificates \
-	curl \
-	libasound2 \
-	libdbus-glib-1-2 \
-	libgtk2.0-0 \
-	libxrender1 \
-	libxt6 \
-	xz-utils \
-	--no-install-recommends \
-	&& rm -rf /var/lib/apt/lists/*
+# Set the env variable DEBIAN_FRONTEND to noninteractive
+# to change user name: here, at USER instruction at the end of this file and in the "starttb" file (home dir)
 
-ENV HOME /home/user
-RUN useradd --create-home --home-dir $HOME user \
-	&& chown -R user:user $HOME
-
-ENV LANG C.UTF-8
-
-ENV TOR_VERSION 6.5a1-hardened
-ENV TOR_FINGERPRINT 0x4E2C6E8793298290
-
-# download tor and check signature
-RUN cd /tmp \
-	&& curl -sSOL "https://dist.torproject.org/torbrowser/${TOR_VERSION}/tor-browser-linux64-${TOR_VERSION}_ALL.tar.xz" \
-	&& curl -sSOL "https://dist.torproject.org/torbrowser/${TOR_VERSION}/tor-browser-linux64-${TOR_VERSION}_ALL.tar.xz.asc" \
-	&& mkdir ~/.gnupg \
-	&& gpg --keyserver "hkp://pool.sks-keyservers.net" --recv-keys ${TOR_FINGERPRINT} \
-	&& gpg --fingerprint ${TOR_FINGERPRINT} | grep "Key fingerprint = EF6E 286D DA85 EA2A 4BA7  DE68 4E2C 6E87 9329 8290" \
-	&& gpg --verify tor-browser-linux64-${TOR_VERSION}_ALL.tar.xz.asc \
-	&& tar -vxJ --strip-components 1 -C /usr/local/bin -f tor-browser-linux64-${TOR_VERSION}_ALL.tar.xz \
-	&& rm -rf tor-browser* \
-	&& rm -rf ~/.gnupg
+ENV DEBIAN_FRONTEND=noninteractive VERSION=6.5 HOME=/home/anon
 
 
-# good fonts
-COPY local.conf /etc/fonts/local.conf
+RUN apt-get update && \
+    apt-get -y dist-upgrade && \
+    sed -i.bak 's/jessie main/jessie main contrib/g' /etc/apt/sources.list && \
+    apt-get update && apt-get install -y \
+    flashplugin-nonfree \
+    iceweasel \
+    xz-utils \
+    curl \
+    --no-install-recommends && \
+    localedef -v -c -i en_US -f UTF-8 en_US.UTF-8 || :
 
-WORKDIR $HOME
-USER user
+RUN useradd -m -d /home/anon anon
 
-ENTRYPOINT ["/bin/bash"]
-CMD [ "/usr/local/bin/Browser/start-tor-browser" ]
+WORKDIR /home/anon
+
+# Add TOR browser
+RUN \
+    curl -sSL -o /home/anon/tor.tar.xz \
+      https://www.torproject.org/dist/torbrowser/${VERSION}/tor-browser-linux64-${VERSION}_en-US.tar.xz && \
+    curl -sSL -o /home/anon/tor.tar.xz.asc \
+      https://www.torproject.org/dist/torbrowser/${VERSION}/tor-browser-linux64-${VERSION}_en-US.tar.xz.asc && \
+    gpg --keyserver ha.pool.sks-keyservers.net \
+      --recv-keys "EF6E 286D DA85 EA2A 4BA7  DE68 4E2C 6E87 9329 8290" && \
+    gpg --verify /home/anon/tor.tar.xz.asc && \
+    tar xvf /home/anon/tor.tar.xz && \
+    rm -f /home/anon/tor.tar.xz*
+
+RUN mkdir /home/anon/Downloads && \
+    chown anon:anon /home/$USER && \
+    chown anon:anon /home/$USER/* && \
+    apt-get autoremove
+
+USER anon
+
+CMD /home/anon/tor-browser_en-US/Browser/start-tor-browser
+
