--- a/dwarffortress/Dockerfile
+++ b/dwarffortress/Dockerfile
@@ -14,8 +14,8 @@ RUN ln -s /ansible-dwarffortress-* /ansible
 # Comment the line below if you do not want dfhack
 RUN cd /ansible && ansible-playbook dfhack.yml --connection=local
 
-# Uncomment the line below if you want to use the Phoebus tile set
-#RUN cd /ansible && ansible-playbook tileset-phoebus.yml --connection=local
+# Uncomment the line below if you want to use the tile set
+#RUN cd /ansible && ansible-playbook tileset-GemSet.yml --connection=local
 
 # Only pick ONE of the following display options:
 
