--- a/archlinux/Dockerfile
+++ b/archlinux/Dockerfile
@@ -1,20 +1,31 @@
 FROM base/archlinux
 MAINTAINER Jack Meredith <jackusm95@gmail.com>
 
-RUN curl -o /etc/pacman.d/mirrorlist "https://www.archlinux.org/mirrorlist/?country=all&protocol=https&ip_version=6&use_mirror_status=on" && \
-  sed -i 's/^#//' /etc/pacman.d/mirrorlist
+# Workaround for wrong permissions in base image
+# https://github.com/archimg/archlinux/issues/6
+RUN /usr/bin/chmod -v 1777 /tmp
 
-RUN useradd -m -g wheel -s /bin/bash user
+# Update, install base-devel (incl. sudo), allow sudo for %users
+RUN echo "keyserver-options auto-key-retrieve" >> /etc/pacman.d/gnupg/gpg.conf && \
+    pacman-key --init && \
+    pacman-key --populate archlinux && \
+    /usr/bin/pacman -Sy --noconfirm archlinux-keyring && \
+    /usr/bin/pacman -Su --noconfirm && \
+    /usr/bin/pacman-db-upgrade && \
+    /usr/bin/pacman -S --noconfirm ca-certificates ca-certificates-mozilla && \
+    /usr/bin/pacman -S --noconfirm base-devel git sudo && \
+    /usr/sbin/pacman -Scc --noconfirm && \
+    /usr/sbin/sudo /usr/sbin/ln -sv /usr/bin/core_perl/pod2man /usr/sbin && \
+    /usr/sbin/sed -i -e "s/Defaults    requiretty.*/ #Defaults    requiretty/g" /etc/sudoers && \
+    /usr/sbin/echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
+
+# Add user, group sudo; switch to user
+RUN /usr/sbin/groupadd --system sudo && \
+    /usr/sbin/useradd -m --groups sudo user
 USER user
-ONBUILD RUN sudo pacman-key --populate && \
-  sudo pacman-key --refresh-keys && \
-  sudo pacman -Sy archlinux-keyring --noconfirm && \
-  sudo pacman -Sy --noprogressbar --noconfirm && \
-  sudo pacman -S --force openssl --noconfirm && \
-  sudo pacman -S pacman --noprogressbar --noconfirm && \
-  sudo pacman-db-upgrade && \
-  sudo pacman -Syyu --noprogressbar --noconfirm && \
-  mkdir -p /tmp/pacaur_install && \
+
+# install pacaur
+RUN mkdir -p /tmp/pacaur_install && \
   cd /tmp/pacaur_install && \
   sudo pacman -S expac yajl git --noconfirm && \
   curl -o PKGBUILD https://aur.archlinux.org/cgit/aur.git/plain/PKGBUILD?h=cower && \
@@ -24,3 +35,7 @@ ONBUILD RUN sudo pacman-key --populate && \
   makepkg PKGBUILD && \
   sudo pacman -U pacaur*.tar.xz --noconfirm && \
   rm -r /tmp/pacaur_install
+RUN sudo pacman -S vim --noconfirm
+RUN mkdir -p /home/user/.config/pacaur && \
+    echo 'editor=vim' > /home/user/.config/pacaur/config
+ONBUILD RUN pacaur -Syu
