--- a/aria2/Dockerfile
+++ b/aria2/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:edge
 MAINTAINER Jack Meredith <jackusm95@gmail.com>
 
-RUN apk add --no-cache aria2
+RUN apk add --no-cache aria2 \
 	&& mkdir /download
 ENTRYPOINT ["aria2c", "--dir=/download"]
 CMD ["--help"]
